Fix paginator
